# postflop-solver

./: .gitignore  AGENTS.md  CLAUDE.md  docker-compose.yml  run.sh
app/: .env.example  Cargo.toml
app/frontend/: eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.js
app/frontend/src/: App.svelte  app.css
app/frontend/src/lib/: api.ts  helpers.ts  stores.ts  types.ts
app/frontend/src/lib/components/: ActionsBar.svelte  BoardBar.svelte  BrowserPanel.svelte  ChanceCards.svelte  ConfigPanel.svelte  HandsTable.svelte  RangeGrid.svelte  SolveOverlay.svelte  SpotList.svelte
app/migrations/: 001_create_spots.sql  002_create_nodes.sql  003_create_nodes_index.sql  004_create_solve_artifacts.sql
app/src/: artifact.rs  main.rs
examples/: browser.rs  threebet_pot.rs
src/: mutex_like.rs
