[package]
name = "postflop-app"
version = "0.1.0"
edition = "2021"

[dependencies]
postflop-solver = { path = "..", default-features = false, features = ["bincode", "rayon", "zstd"] }
axum = { version = "0.7", features = ["json"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["cors"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "json"] }
dotenvy = "0.15"
chrono = { version = "0.4", features = ["serde"] }
zstd = "0.12.4"
